kustomize/application/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hello-kubernetes 
  annotations:
    argocd-image-updater.argoproj.io/image-list: "hassenefl/hello-kubernetes"
    argocd-image-updater.argoproj.io/write-back-method: git
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: hello-kubernetes-canary
      stableService: hello-kubernetes-stable 
      trafficRouting:
        nginx:
          stableIngress: hello-kubernetes-stable
      steps:
      - setWeight: 30
      - pause: {duration: 30s}
      - setWeight: 60
      - pause: {duration: 30s}
      - setWeight: 100
      - pause: {duration: 10}
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 50

  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        image: hassenefl/hello-kubernetes:12w8c653
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
