kustomize/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-stable
spec:
  ports:
  - port: 80 
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: hello-kubernetes
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: hello-kubernetes
