kustomize/application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-stable 
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: hello-kubernetes.com
    http:
      paths:
      - path: /
        backend:
          # Reference to a Service name, also specified in the Rollout spec.strategy.canary.stableService field
          serviceName: hello-kubernetes-stable
          servicePort: 80
